--- a/README
+++ b/README
@@ -2,3 +2,11 @@ CMPUT 301
 Assignment 1 - HabitTracker
 Alvin Huang
 
+The assignment was to create an app that records completions of habits.
+
+Unfortunately, I was unable to complete the task in time.
+The only functional pieces of the app that can be seen is the transition between the main screen, where it is to display the list of habits, and the add new habit screen.
+The habit completions is non-functional.
+The saving of data is non-functional.
+
+video file URL: https://archive.org/details/as1Recording
